Header is complete

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <span></span>
             </div>
             <nav class="header__menu">
-
                 <ul class="header__list">
                     <li><a href="#" class="header__link header__link_active">Home</a></li>
                     <li><a href="#" class="header__link">About</a></li>
@@ -37,6 +36,18 @@
         </div>
     </div>
 </header>
+<section class="welcome">
+    <div class="container">
+        <div class="welcome__wrapper">
+            <h1 class="welcome__title">Welcome!</h1>
+            <h2 class="welcome__subtitle">I am <span class="welcome__subtitle welcome__subtitle_colored">Web Designer</span></h2>
+            <div class="welcome__btns">
+                <a class="welcome__btn" href="#">View Work</a>
+                <a class="welcome__btn welcome__btn_colored" href="#">Hire Me!</a>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="about">
     <div class="container">
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci excepturi ipsa maxime non pariatur rem
