Added welcome and about sections with mobile version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <div class="container">
         <div class="welcome__wrapper">
             <h1 class="welcome__title">Welcome!</h1>
-            <h2 class="welcome__subtitle">I am <span class="welcome__subtitle welcome__subtitle_colored">Web Designer</span></h2>
+            <h2 class="welcome__subtitle">I am <span
+                    class="welcome__subtitle welcome__subtitle_colored">Web Designer</span></h2>
             <div class="welcome__btns">
                 <a class="welcome__btn" href="#">View Work</a>
                 <a class="welcome__btn welcome__btn_colored" href="#">Hire Me!</a>
@@ -49,6 +50,62 @@
     </div>
 </section>
 <section class="about">
+    <div class="container">
+        <h2 class="about__title about__title_outer">About Me</h2>
+        <div class="about__wrapper">
+            <div class="about__block about__block_paddings">
+                <h2 class="about__title about__title_inner">About Me</h2>
+                <div class="about__skills">
+                    <div class="about__skills-item">
+                        <span>UI | UX</span>
+                        <div class="hollow-line">
+                            <div class="colored-line colored-line_80"></div>
+                        </div>
+                    </div>
+                    <div class="about__skills-item">
+                        <span>Graphic</span>
+                        <div class="hollow-line">
+                            <div class="colored-line colored-line_60"></div>
+                        </div>
+                    </div>
+                    <div class="about__skills-item">
+                        <span>Branding</span>
+                        <div class="hollow-line">
+                            <div class="colored-line colored-line_50"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__block about__block_img_mini">
+                    <img src="images/designer_photo_about_mini.png" alt="about_designer">
+                </div>
+            </div>
+            <div class="about__block about__block_img">
+                <img src="images/designer_photo_about.png" alt="about_designer">
+            </div>
+            <div class="about__block about__block_info">
+                <span>WHO AM I</span>
+                <h3>Daryna Dmytrenko</h3>
+                <p>
+                    Hi, my name is Dasha, and I'm a professional UI/UX designer, graphic designer, and branding
+                    specialist with two years of experience. I love my job and strive to create the best user interfaces
+                    and visual elements possible. I have experience creating unique visual elements, including logos,
+                    images, banners, and packaging, as well as designing user interfaces and branding. It's essential to
+                    me to continually improve and enhance the user experience, and that drives my approach to work.
+                </p>
+                <div class="about__social">
+                    <span>Follow me:</span>
+                    <div class="about__social-line"></div>
+                    <div class="about__social-block">
+                        <a class="about__social-link" href="#"><img src="images/linkedin.svg" alt="linkedin_icon"></a>
+                        <a class="about__social-link" href="#"><img src="images/instagram.svg" alt="instagram_icon"></a>
+                        <a class="about__social-link" href="#"><img src="images/facebook.svg" alt="facebook_icon"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="test">
     <div class="container">
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci excepturi ipsa maxime non pariatur rem
             vel,
