Section services completed

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 </section>
 <section class="about">
     <div class="container">
-        <h2 class="about__title about__title_outer">About Me</h2>
+        <h2 class="main-title about__title_outer">About Me</h2>
         <div class="about__wrapper">
             <div class="about__block about__block_paddings">
-                <h2 class="about__title about__title_inner">About Me</h2>
+                <h2 class="main-title about__title_inner">About Me</h2>
                 <div class="about__skills">
                     <div class="about__skills-item">
                         <span>UI | UX</span>
@@ -102,6 +102,56 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="services">
+    <div class="container">
+        <div class="services__wrapper">
+        <h2 class="main-title services__title">Services</h2>
+            <ul class="services__list">
+                <li class="services__item">
+                    <a class="services__link" href="#">
+                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <span class="services__service-title">UI Design</span>
+                        <p class="services__info">
+                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
+                            visual elements to ensure the best user experience.
+                        </p>
+                    </a>
+                </li>
+                <li class="services__item">
+                    <a class="services__link" href="#">
+                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <span class="services__service-title">UI Design</span>
+                        <p class="services__info">
+                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
+                            visual elements to ensure the best user experience.
+                        </p>
+                    </a>
+                </li>
+                <li class="services__item">
+                    <a class="services__link" href="#">
+                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <span class="services__service-title">UI Design</span>
+                        <p class="services__info">
+                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
+                            visual elements to ensure the best user experience.
+                        </p>
+                    </a>
+                </li>
+                <li class="services__item">
+                    <a class="services__link" href="#">
+                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <span class="services__service-title">UI Design</span>
+                        <p class="services__info">
+                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
+                            visual elements to ensure the best user experience.
+                        </p>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
