added some features to Services section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <section class="services">
     <div class="container">
         <div class="services__wrapper">
-        <h2 class="main-title services__title">Services</h2>
+            <h2 class="main-title services__title">Services</h2>
             <ul class="services__list">
                 <li class="services__item">
                     <a class="services__link" href="#">
@@ -124,30 +124,30 @@
                 <li class="services__item">
                     <a class="services__link" href="#">
                         <img class="services__img" src="images/instagram.svg" alt="service-icon">
-                        <span class="services__service-title">UI Design</span>
+                        <span class="services__service-title">UX Design</span>
                         <p class="services__info">
-                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
-                            visual elements to ensure the best user experience.
+                            Conduct user behavior research, create usage scenarios, develop prototypes, test and
+                            optimize the user experience of applications and websites.
                         </p>
                     </a>
                 </li>
                 <li class="services__item">
                     <a class="services__link" href="#">
                         <img class="services__img" src="images/instagram.svg" alt="service-icon">
-                        <span class="services__service-title">UI Design</span>
+                        <span class="services__service-title">Graphic Design</span>
                         <p class="services__info">
-                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
-                            visual elements to ensure the best user experience.
+                            Create unique visual elements such as logos, images, banners, and packaging that help
+                            improve branding and connect with the target audience.
                         </p>
                     </a>
                 </li>
                 <li class="services__item">
                     <a class="services__link" href="#">
                         <img class="services__img" src="images/instagram.svg" alt="service-icon">
-                        <span class="services__service-title">UI Design</span>
+                        <span class="services__service-title">Branding</span>
                         <p class="services__info">
-                            Design user interfaces, create control elements, color schemes, fonts, animations, and other
-                            visual elements to ensure the best user experience.
+                            Create unique brand identities such as logos, color schemes, and typography that help stand
+                            out in the market and establish an emotional connection with the target audience.
                         </p>
                     </a>
                 </li>
