Added main titles to all completed sections

--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
         </div>
     </div>
 </section>
+<section class="portfolio">
+    <div class="container">
+        <div class="portfolio__wrapper">
+            <h2 class="main-title services__title">Portfolio</h2>
+        </div>
+    </div>
+</section>
 <section class="test">
     <div class="container">
         <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci excepturi ipsa maxime non pariatur rem
