--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
@@ -159,6 +163,100 @@
     <div class="container">
         <div class="portfolio__wrapper">
             <h2 class="main-title services__title">Portfolio</h2>
+            <div class="portfolio__slider">
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+                <!-- Slider main container -->
+                <div class="graphic-slider swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="graphic-slider__wrapper swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-1.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-2.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-3.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-4.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-1.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-2.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-3.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-4.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-1.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-2.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-3.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-4.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-1.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-2.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-3.png" alt="slider-pic">
+                            </a>
+                        </div>
+                        <div class="graphic-slider__slide swiper-slide">
+                            <a href="#" class="graphic-slider__link">
+                                <img src="images/slider-4.png" alt="slider-pic">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+            </div>
         </div>
     </div>
 </section>
@@ -255,6 +353,7 @@
         </div>
     </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
