Added section contact

--- a/index.html
+++ b/index.html
@@ -255,8 +255,38 @@
                     </div>
                 </div>
                 <!-- If we need pagination -->
-                    <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div>
             </div>
+        </div>
+    </div>
+</section>
+<section class="contact">
+    <div class="container">
+        <h2 class="main-title contact__title">Contact Me</h2>
+        <div class="contact__wrapper">
+            <div class="contact__contacts">
+                <div class="contact__box">
+                    <div class="contact__phone">
+                        <span class="contact__mini-title">PHONE</span>
+                        <a href="#" class="phone-number">+380669817321</a>
+                    </div>
+                    <div class="contact__location">
+                        <span class="contact__mini-title">CITY</span>
+                        <span class="location-subtext">Ukraine, Lviv</span>
+                    </div>
+                </div>
+                <div class="contact__email">
+                    <span class="contact__mini-title">EMAIL</span>
+                    <a href="#" class="email-link">workdaryna@gmail.com</a>
+                </div>
+            </div>
+            <form class="contact__form">
+                <input type="text" name="name" id="contact-name" placeholder="Name">
+                <input type="email" name="email" id="contact-email"placeholder="Email">
+                <input type="text" name="subject" id="contact-subject" placeholder="Subject">
+                <textarea name="message" id="contact-message" placeholder="Message"></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </div>
     </div>
 </section>
