--- a/index.html
+++ b/index.html
@@ -412,5 +412,8 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/header.js"></script>
+<script src="js/main-tabs-module.js"></script>
+<script src="js/main-sliders.js"></script>
 </body>
 </html>
