Added text to Portfolio/Gallery page and styles for hover effects

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="tabs__btns">
                     <button class="tab-1 active">WEB</button>
                     <button class="tab-2">GRAPHIC</button>
-                    <button class="tab-3">ALL</button>
+                    <a href="portfolio-page.html" class="tab-link">ALL</a>
                 </div>
                 <div class="tabs__content tabs__content_1 active">
                     <div class="portfolio__graphic-slider">
@@ -360,7 +360,6 @@
                         <div class="web-slider-pagination swiper-pagination"></div>
                     </div>
                 </div>
-                <div class="tabs__content tabs__content_3">AAAAAAAAAAAAAAAAA</div>
             </div>
         </div>
     </div>
