--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1 class="main-title title-primary gallery__title">Portfolio</h1>
         <div class="portfolio__tabs tabs">
-            <div class="tabs__btns">
+            <div class="tabs__btns gallery__tabs">
                 <button class="gallery__tab-1 active">WEB</button>
                 <button class="gallery__tab-2">GRAPHIC</button>
             </div>
@@ -27,31 +27,55 @@
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                     <li class="gallery__item">
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                     <li class="gallery__item">
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                     <li class="gallery__item">
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                     <li class="gallery__item">
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                     <li class="gallery__item">
                         <a href="#" class="gallery__link">
                             <img src="images/slider-1.png" alt="gallery-pic">
                         </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
                     </li>
                 </ul>
             </div>
