--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -80,7 +80,62 @@
                 </ul>
             </div>
             <div class="tabs__content gallery__content_2">
-                qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
+                <ul class="gallery__list">
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                    <li class="gallery__item">
+                        <a href="#" class="gallery__link">
+                            <img src="images/gallery-pic.png" alt="gallery-pic">
+                        </a>
+                        <p class="gallery__text">
+                            Topic of the day | Murder in the Dnipro. Did the policeman have the right to shoot the
+                            attacker: analysis
+                        </p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
