Bug fix on blue oreol

--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
             <ul class="services__list">
                 <li class="services__item">
                     <a class="services__link" href="#">
-                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <div class="services__figure">
+                            <div class="inner-figure">
+                                <img class="services__img" src="images/1.svg" alt="service-icon">
+                            </div>
+                        </div>
                         <span class="services__service-title">UI Design</span>
                         <p class="services__info">
                             Design user interfaces, create control elements, color schemes, fonts, animations, and other
@@ -126,7 +130,11 @@
                 </li>
                 <li class="services__item">
                     <a class="services__link" href="#">
-                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <div class="services__figure">
+                            <div class="inner-figure">
+                                <img class="services__img" src="images/2.svg" alt="service-icon">
+                            </div>
+                        </div>
                         <span class="services__service-title">UX Design</span>
                         <p class="services__info">
                             Conduct user behavior research, create usage scenarios, develop prototypes, test and
@@ -136,7 +144,11 @@
                 </li>
                 <li class="services__item">
                     <a class="services__link" href="#">
-                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <div class="services__figure">
+                            <div class="inner-figure">
+                                <img class="services__img" src="images/3.svg" alt="service-icon">
+                            </div>
+                        </div>
                         <span class="services__service-title">Graphic Design</span>
                         <p class="services__info">
                             Create unique visual elements such as logos, images, banners, and packaging that help
@@ -146,7 +158,11 @@
                 </li>
                 <li class="services__item">
                     <a class="services__link" href="#">
-                        <img class="services__img" src="images/instagram.svg" alt="service-icon">
+                        <div class="services__figure">
+                            <div class="inner-figure">
+                                <img class="services__img" src="images/4.svg" alt="service-icon">
+                            </div>
+                        </div>
                         <span class="services__service-title">Branding</span>
                         <p class="services__info">
                             Create unique brand identities such as logos, color schemes, and typography that help stand
